--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "i": "^0.3.6",
-    "npm": "^6.9.0",
     "path": "^0.12.7",
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
@@ -19,7 +17,8 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
