--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "path": "^0.12.7",
     "react": "^16.8.3",
