--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
@@ -24,7 +25,9 @@
   "scripts": {
     "start": "react-scripts start",
     "server": "nodemon server/server.js",
-    "build": "react-scripts build",
+    "server:build": "node server/server.js",
+    "client:build": "react-scripts build",
+    "heroku-postbuild": "npm-run-all -p -r server:build client:build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
