--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.1",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "react": "^16.8.3",
@@ -34,7 +35,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:5000",
   "browserslist": [
     ">0.2%",
     "not dead",
