--- a/package.json
+++ b/package.json
@@ -1,48 +1,36 @@
 {
-  "name": "date-night",
-  "version": "0.1.0",
-  "private": true,
+  "name": "date-night-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "dev": "npm-run-all -p -r client:dev server:dev",
+    "client:dev": "cd client && npm run start",
+    "server:dev": "nodemon server.js",
+    "client:build": "cd client && npm run build",
+    "server:build": "node server.js",
+    "heroku-pre-build": "npm install && cd client && npm install",
+    "heroku-post-build": "npm-run-all -p -r client:build server:build",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jma26/date-night.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jma26/date-night/issues"
+  },
+  "homepage": "https://github.com/jma26/date-night#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "http-proxy-middleware": "^0.19.1",
     "npm-run-all": "^4.1.5",
-    "path": "^0.12.7",
-    "react": "^16.8.3",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.8.3",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "server": "nodemon server/server.js",
-    "server:build": "node server/server.js",
-    "client:build": "react-scripts build",
-    "heroku-postbuild": "npm-run-all -p -r server:build client:build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "proxy": "http://localhost:5000",
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "eslint-config-rallycoding": "^3.2.0"
+    "path": "^0.12.7"
   }
 }
